Add new textual content, rename modals, and add link to rules xlsx

--- a/src/main/webapp/siteUploadForm.html
+++ b/src/main/webapp/siteUploadForm.html
@@ -126,14 +126,14 @@
         <h2 style="font-size: 18px">Learn</h2>
          <div class="btn-group-vertical btn-block">                     
         <a class="btn btn-default" type="button" tabindex="1" data-toggle="modal" data-target="#siteIntroductionModal" id="introductionButton"
-          href="javascript:void(0)" onclick="this.blur();">Scorecard Introduction and Release Notes</a> 
+          href="javascript:void(0)" onclick="this.blur();">Background and Release Notes</a> 
         <a class="btn btn-default" type="button" tabindex="1" data-toggle="modal" data-target="#scoringCriteriaModal" id="scoringCriteriaButton"
-          href="javascript:void(0)" onclick="this.blur();">How to Interpret the Scorecard Results</a>          
+          href="javascript:void(0)" onclick="this.blur();">Rules and Scoring Criteria</a>          
                                      
         <h2 style="font-size: 18px">Implement</h2>
          <div class="btn-group-vertical btn-block">                         
           <a class="btn btn-default" type="button" tabindex="1" data-toggle="modal" data-target="#siteApiInstructionsModal" id="siteApiInstructionsButton"
-            href="javascript:void(0)" onclick="this.blur();">Scorecard API and External Tool Instructions</a>
+            href="javascript:void(0)" onclick="this.blur();">How to Use the API, Services, and External Tools</a>
           <a class="btn btn-default" type="button" tabindex="1" target="_blank"
             href="https://github.com/siteadmin/Scorecard-Local-Instantiation" onclick="this.blur();">Download the Scorecard for Local Instantiation</a>
           <link-disclaimer span-class="siteUiData.disclaimer.classesForButton"></link-disclaimer>
