--- a/src/main/webapp/siteIntroductionModal.html
+++ b/src/main/webapp/siteIntroductionModal.html
@@ -15,7 +15,7 @@
         <div class="row">
           <div class="col-md-12">
             <div id="introductionHeader">
-              <h2 id="siteIntroductionModalLabel">Scorecard Introduction and Release Notes</h2>
+              <h2 id="siteIntroductionModalLabel">Scorecard Background and Release Notes</h2>
             </div>
           </div>
         </div>
