--- a/src/main/webapp/siteTopLevelContent.html
+++ b/src/main/webapp/siteTopLevelContent.html
@@ -1,5 +1,30 @@
 <div class="jumbotron">
   <h1>C-CDA Scorecard</h1>
   <!--<h1 style="font-size: 250%">(Beta Release)</h1>-->
-  <hr />
+  
+  <div style="text-align: left">
+    <h2>Introduction</h2>
+    <div>
+      <p style="font-size: 110%">The C-CDA Scorecard enables providers, implementers, and health IT professionals with a tool
+  that compares how artifacts (transition of care documents, care plans etc) created by your
+  organization stack up against the HL7 C-CDA implementation guide and HL7 best practices. The
+  C-CDA Scorecard promotes best practices in C-CDA implementation by assessing key aspects of
+  the structured data found in individual documents. The Scorecard tool provides a rough quantitative
+  assessment and highlights areas of improvement which can be made today to move the needle
+  forward in interoperability of C-CDA documents. 
+  The <a href="http://www.hl7.org/documentcenter/public/wg/structure/C-CDA%20Scorecard%20Rubrics%203.pptx">
+  best practices and quantitative scoring criteria</a> have been developed by HL7 through the HL7-ONC Cooperative agreement to improve the
+  implementation of health care standards. We hope that providers and health IT developers will use
+  the tool to identify and resolve issues around C-CDA document interoperability in their health IT
+  systems.</p>
+    <p style="font-size: 110%">The report has three sections. The first section contains the summary of the C-CDA Scorecard
+  results highlighting the overall document grade compared to the industry, a quantitative score out of
+  a maximum of 100. The second section identifies areas for improvement organized by clinical
+  domains in a clickable heatmap which is used for navigation. The third section contains detailed results for each domain 
+  which identify issues when compared against the implemented rules.</p>
+    </div>
+  </div>
+  
+  
+  
 </div>
