--- a/src/main/webapp/siteTopLevelContent.html
+++ b/src/main/webapp/siteTopLevelContent.html
@@ -6,9 +6,30 @@
 <div class="container">
 
   <div markdown-src="{{siteUiData.contentURL}}CCDAScorecardTopLevelIntroduction.md"></div>
+  <!--try me button-->
+  <div class="jumbotron text-center">
+    <div class="row">
+      <div class="col-md-6 col-xs-6">                            
+        <button ng-click="tryScorecard()" id="scTryMe"
+          class="btn btn-success btn-block start" data-toggle="modal"
+          data-target="#resultModal" tabindex="1" type="button">
+          <!--<i class="glyphicon glyphicon-user"></i>-->
+          <span>Try Me!</span>
+        </button>
+      </div>                           
+      <div class="col-md-6 col-xs-6">
+        <select
+          ng-init="selectedTryMeDoc = selectedTryMeDoc || tryMeData.tryMeDocs[0]"
+          ng-model="selectedTryMeDoc"
+          ng-options="doc as doc.value for doc in tryMeData.tryMeDocs"
+          id="tryMeSampleSelector" class="form-control" tabindex="1">
+        </select>
+      </div>
+    </div>                            
+  </div>  
   <br />
   
-  <div class="panel panel-info">
+  <div class="panel panel-info" style="margin-bottom: 34px">
     <div class="panel-heading">
       <h2 class="panel-title" style="font-size: 150%">Latest Feature "Showcase"</h2>
     </div>
@@ -20,6 +41,13 @@
       </p>
     </div>
   </div>
+  
+  <h2>Rules and Scoring Criteria</h2>  
+  <div markdown-src="{{siteUiData.contentURL}}CCDAScorecardResultsInterpretation.md"
+       style="margin-bottom: 28px"></div>
+  
+  <h2> Scorecard APIs and External Tools</h2>
+  <div markdown-src="{{siteUiData.contentURL}}CCDAScorecardApiAndExternalTool.md"></div>	
   <br />
 
 </div>
