--- a/src/main/webapp/siteTopLevelContent.html
+++ b/src/main/webapp/siteTopLevelContent.html
@@ -6,14 +6,17 @@
 <div class="container">
 
   <div markdown-src="{{siteUiData.contentURL}}CCDAScorecardTopLevelIntroduction.md"></div>
+  <br />
+  <site-upload-form></site-upload-form>  
+  
   <!--try me button-->
+  <!--
   <div class="jumbotron text-center">
     <div class="row">
       <div class="col-md-6 col-xs-6">                            
         <button ng-click="tryScorecard()" id="scTryMe"
           class="btn btn-success btn-block start" data-toggle="modal"
           data-target="#resultModal" tabindex="1" type="button">
-          <!--<i class="glyphicon glyphicon-user"></i>-->
           <span>Try Me!</span>
         </button>
       </div>                           
@@ -26,7 +29,8 @@
         </select>
       </div>
     </div>                            
-  </div>  
+  </div>
+  -->
   <br />
   
   <div class="panel panel-info" style="margin-bottom: 34px">
